test_case/rust-lang_rust/51066_392191928.rs
plain
[00:45:31] ........................................................................................i...........
[00:45:37] ..............................................i.....................................................
[00:45:41] ....................................................................................................
[00:45:44] ....................................................................................................
[00:45:48] .................................................................................F.F................
[00:45:56] ....................................................................................................
[00:46:00] ....................................................................................................
[00:46:05] ....................................................................................................
[00:46:10] ................................................................................i...................
[00:46:10] ................................................................................i...................
[00:46:15] .........................................................i..........................................
[00:46:19] .............................................................................ii.....................
[00:46:25] ....................................................................................................
[00:46:31] .......................................................................................i............
[00:46:34] .....iiiiiiiii...................................................
[00:46:34] 
[00:46:34] ---- [ui] ui/feature-gate-box-expr.rs stdout ----
[00:46:34] diff of stderr:
[00:46:34] 
[00:46:34] 
[00:46:34] - error[E0658]: box expression syntax is experimental; you can call `Box::new` instead. (see issue #27779)
[00:46:34] + error[E0658]: box expression syntax is experimental; you can call `Box::new` instead. (see issue #49733)
[00:46:34] 2   --> $DIR/feature-gate-box-expr.rs:22:13
[00:46:34] 3    |
[00:46:34] 4 LL |     let x = box 'c'; //~ ERROR box expression syntax is experimental
[00:46:34] 
[00:46:34] The actual stderr differed from the expected stderr.
[00:46:34] The actual stderr differed from the expected stderr.
[00:46:34] Actual stderr saved to /checkout/obj/build/x86_64-unknown-linux-gnu/test/ui/feature-gate-box-expr/feature-gate-box-expr.stderr
[00:46:34] To update references, rerun the tests and pass the `--bless` flag
[00:46:34] To only update this specific test, also pass `--test-args feature-gate-box-expr.rs`
[00:46:34] error: 1 errors occurred comparing output.
[00:46:34] status: exit code: 101
[00:46:34] status: exit code: 101
[00:46:34] command: "/checkout/obj/build/x86_64-unknown-linux-gnu/stage2/bin/rustc" "/checkout/src/test/ui/feature-gate-box-expr.rs" "--target=x86_64-unknown-linux-gnu" "--error-format" "json" "-Zui-testing" "-C" "prefer-dynamic" "-o" "/checkout/obj/build/x86_64-unknown-linux-gnu/test/ui/feature-gate-box-expr/a" "-Crpath" "-O" "-Zunstable-options" "-Lnative=/checkout/obj/build/x86_64-unknown-linux-gnu/native/rust-test-helpers" "-L" "/checkout/obj/build/x86_64-unknown-linux-gnu/test/ui/feature-gate-box-expr/auxiliary" "-A" "unused"
[00:46:34] ------------------------------------------
[00:46:34] 
[00:46:34] ------------------------------------------
[00:46:34] stderr:
[00:46:34] stderr:
[00:46:34] ------------------------------------------
[00:46:34] {"message":"box expression syntax is experimental; you can call `Box::new` instead. (see issue #49733)","code":{"code":"E0658","explanation":"\nAn unstable feature was used.\n\nErroneous code example:\n\n